# RayTracer_CPP

./: CMakeLists.txt  ObjMesh.cpp  camera.cpp  color.cpp  hit.cpp  main.cpp  material.cpp  object.cpp  sphere.cpp  triangle.cpp  vec3.cpp  world.cpp
header/: ObjMesh.h  camera.h  color.h  hit.h  material.h  object.h  randomUtils.h  ray.h  sphere.h  triangle.h  vec3.h  world.h
